[package]
name = "scraper_project"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["blocking"] }
scraper = "0.20.0"
serde = {version="1.0.210", features=["derive"]}
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.2"
urlencoding = "2.1.3"
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", features = ["cuda", "flash-attn"] }
